# Surgical-Tokens

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: default.yaml
docs/: ASSAY_PLAN.md  FINDINGS.md  HORIZON_SWEEP_PLAN.md
scripts/: b4_random_baseline.py  build_1fps_sequence.py  download_cholectrack20.py  extract_embeddings_stage1.py  fine_regime_check.py  g1_encoder_smoke.py  g2_alignment_check.py  horizon_sweep.py  launch_distributed.sh  run_synthetic_demo.py  stage2_response_prediction.py
surgical_tokens/: __init__.py  cli.py  config.py
surgical_tokens/data/: case_log.py  quality_filter.py  segmentation.py  synthetic.py
surgical_tokens/encoding/: sparse_encoder.py  video_encoder.py
surgical_tokens/evaluation/: clustering.py  metrics.py  procedure_eval.py
surgical_tokens/models/: judge.py  sequence_model.py
surgical_tokens/pipeline/: build_vocabulary.py  extract_embeddings.py  train_pipeline.py
surgical_tokens/training/: distributed.py  dpo.py  pretrain.py
tests/: test_synthetic.py
