[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "surgical-tokens"
version = "0.1.0"
description = "Surgical procedure modeling via clip-token sequence learning and DPO"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "torchvision>=0.16",
    # >=4.52 for V-JEPA2; <5.0 because the 5.x attention refactor drops the
    # 2022 VideoMAE checkpoint's trained q/v attention biases (loads them as
    # zero) — silently handicapping the E-recon encoder. Verified via the G1
    # smoke (scripts/g1_encoder_smoke.py). Revisit when 5.x fixes the loader.
    "transformers>=4.52,<5.0",
    "accelerate>=0.25",
    "trl>=0.7",
    "datasets>=2.16",
    "decord>=0.6",
    "scenedetect[opencv]>=0.6",
    "vector-quantize-pytorch>=1.12",
    "safetensors>=0.4",
    "pyyaml>=6.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "tqdm>=4.66",
    "wandb>=0.16",
    "anthropic>=0.40",
    "typer>=0.9",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1"]

[project.scripts]
surtok = "surgical_tokens.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["surgical_tokens*"]

[tool.ruff]
line-length = 100
